feat: chat service api doc
